welcome.lessons.welcome.bat.bool2.NearTen.scala.error
nearTen:2: error: ';' expected but integer literal found.
	if (num%10) <= 2 {return true}
                       ^